Implement seat selection features and fix styles, add new pages

--- a/view/html/keypad.css
+++ b/view/html/keypad.css
@@ -59,7 +59,7 @@
 
         .popupContent {
             padding-top: 4rem;
-            text-align: center;
+            /* text-align: center; */
         }
 
         .keypadArea {
