--- a/view/html/seat_selectionC.html
+++ b/view/html/seat_selectionC.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
-    <title>seat_selectionA</title>
+    <title>seat_selectionC</title>
     <style>
         .layoutArea {
             display: flex;
@@ -232,6 +232,10 @@
         <section class="layoutArea">
 
             <!-- ~여기에 작성~ -->
+            <section>
+                <div class="">예약된좌석</div>
+                <div class=""></div>
+            </section>
             <section class="sectionTop">
                 <div id="ticketCountArea" class="ticketCountArea">
                     <button id="adultCountPlusBtn">+</button>성인<span id="adultCount">0</span><button
@@ -250,7 +254,7 @@
 
             <section id="sectionBottom" class="sectionBottom">
                 <div class="seatsArea">
-                    <empty></empty>
+
                     <input id="A1" type="checkbox" class="seat-checkbox">
                     <label for="A1">A1</label>
 
@@ -262,7 +266,8 @@
 
                     <input id="A4" type="checkbox" class="seat-checkbox">
                     <label for="A4">A4</label>
-
+                    <empty></empty>
+                    <empty></empty>
                     <input id="A5" type="checkbox" class="seat-checkbox">
                     <label for="A5">A5</label>
 
@@ -274,7 +279,7 @@
 
                     <input id="A8" type="checkbox" class="seat-checkbox">
                     <label for="A8">A8</label>
-                    <empty></empty>
+
 
                 </div>
                 <div class="seatsArea">
@@ -289,6 +294,7 @@
 
                     <input id="B4" type="checkbox" class="seat-checkbox">
                     <label for="B4">B4</label>
+
                     <empty></empty>
                     <empty></empty>
 
@@ -317,6 +323,7 @@
 
                     <input id="C4" type="checkbox" class="seat-checkbox">
                     <label for="C4">C4</label>
+
                     <empty></empty>
                     <empty></empty>
 
@@ -345,6 +352,7 @@
 
                     <input id="D4" type="checkbox" class="seat-checkbox">
                     <label for="D4">D4</label>
+
                     <empty></empty>
                     <empty></empty>
 
@@ -373,6 +381,7 @@
 
                     <input id="E4" type="checkbox" class="seat-checkbox">
                     <label for="E4">E4</label>
+
                     <empty></empty>
                     <empty></empty>
 
@@ -421,7 +430,7 @@
                     class="timeDisplay">12:00</span>
             </article>
         </section>
-
+        <!-- script -->
     </div>
     <!-- ==script== -->
     <script>
