--- a/view/html/select_movie_time.html
+++ b/view/html/select_movie_time.html
@@ -10,26 +10,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     <!-- icon -->
     <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
-
-    <!-- 외부 CSS 파일 링크 -->
+    <!-- css -->
+    <title>select_movie_time</title>
     <link rel="stylesheet" href="style.css">
-
-
-    <title>select_movie_time_popup</title>
-
     <style>
-        /* 시간선택팝업 */
         .posterBasicInformation {
             width: 100%;
             display: flex;
-            padding-top: 5.5rem;
+            padding-top: 10.5rem;
             position: relative;
             justify-content: center;
         }
 
         .posterImg {
-            width: 25rem;
-            height: 35rem;
+            width: 30rem;
+            height: 43rem;
             background-image: url("images/베테랑.png");
             background-size: cover;
             /*border: 1px solid blue;*/
@@ -38,7 +33,7 @@
         .posterInformation {
             width: 25rem;
             height: 5rem;
-            margin-left: 6.5rem;
+            margin-left: 27.5rem;
             margin-top: .5rem;
             text-align: center;
             line-height: 5rem;
@@ -64,7 +59,7 @@
             width: 39.2rem;
             height: 30rem;
             flex-wrap: wrap;
-            margin-left: 4rem;
+            margin-left: 6rem;
             margin-right: -1.3rem;
             margin-top: 3rem;
             gap: 2rem;
@@ -110,13 +105,9 @@
 
         /* 확인 버튼 스타일 */
 
-        .popupContent {
-            position: relative;
-        }
-
         .timeSelectionBtn {
             position: absolute;
-            right: 5%;
+            right: 3.3%;
             bottom: 5%;
             height: 4rem;
             width: 11rem;
@@ -159,6 +150,7 @@
     <div class="wrap">
         <!-- ===레이아웃 영역=== -->
         <section class="layoutArea">
+
             <!-- ===사이드바 영역=== -->
             <section class="progressSidebar">
                 <div class="progressSettings completedStep"><span class="stepLabel">영화<br>선택</span></div>
@@ -166,73 +158,65 @@
                 <div class="progressSettings remainingStep"><span class="stepLabel">좌석<br>선택</span></div>
                 <div class="progressSettings remainingStep paymentStep"><span class="stepLabel">결제</span></div>
             </section>
-            <!-- ===팝업 영역=== -->
-            <section class="popupArea">
-                <article class="popupBar">
-                    <p class="popupTitle popupBarTextCommon">영화 시간을 선택해주세요.</p>
-                    <i class="popupBarTextCommon fa-solid fa-x"></i>
-                </article>
-                <section class="popupContent">
-                    <!-- ~여기에 작성~ -->
+            <!-- 시간선택팝업 -->
+            <div class="timePopupAll">
+                <div class="posterBasicInformation">
 
-                    <!-- 시간선택팝업 -->
-                    <div class="timePopupAll">
-                        <div class="posterBasicInformation">
+                    <div class="posterImg"></div>
+                    <ul class="allMvTime" id="allMvTime">
+                        <!-- 1 -->
+                        <li class="mvTimeList" id="list01">
+                            <p class="theather">A관</p>
+                            <p class="startAndEndTime">11시00분</p>
+                            <p class="startAndEndTime">~12시00분</p>
+                        </li>
+                        <!-- 2 -->
+                        <li class="mvTimeList" id="list02">
+                            <p class="theather">A관</p>
+                            <p class="startAndEndTime">12시00분</p>
+                            <p class="startAndEndTime">~13시00분</p>
+                        </li>
+                        <!-- 3 -->
+                        <li class="mvTimeList" id="list03">
+                            <p class="theather">A관</p>
+                            <p class="startAndEndTime">13시00분</p>
+                            <p class="startAndEndTime">~14시00분</p>
+                        </li>
+                        <!-- 4 -->
+                        <li class="mvTimeList" id="list04">
+                            <p class="theather">A관</p>
+                            <p class="startAndEndTime">14시00분</p>
+                            <p class="startAndEndTime">~15시00분</p>
+                        </li>
+                        <!-- 5 -->
+                        <li class="mvTimeList" id="list05">
+                            <p class="theather">A관</p>
+                            <p class="startAndEndTime">15시00분</p>
+                            <p class="startAndEndTime">~16시00분</p>
+                        </li>
+                        <!-- 6 -->
+                        <li class="mvTimeList" id="list06">
+                            <p class="theather">A관</p>
+                            <p class="startAndEndTime">16시00분</p>
+                            <p class="startAndEndTime">~17시00분</p>
+                        </li>
+                        <!-- 7 -->
+                        <li class="mvTimeList" id="list07">
+                            <p class="theather">A관</p>
+                            <p class="startAndEndTime">17시00분</p>
+                            <p class="startAndEndTime">~18시00분</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="posterInformation">
+                    <p id="mvName" class="mvName">영화명</p>
+                    <p id="mvTime" class="mvTime"></p>
+                </div>
+                <button id="timeSelectionCompleteBtn" class="timeSelectionBtn disalbledBtn">선택 완료</button>
 
-                            <div class="posterImg"></div>
-                            <ul class="allMvTime" id="allMvTime">
-                                <!-- 1 -->
-                                <li class="mvTimeList" id="list01">
-                                    <p class="theather">A관</p>
-                                    <p class="startAndEndTime">11시00분</p>
-                                    <p class="startAndEndTime">~12시00분</p>
-                                </li>
-                                <!-- 2 -->
-                                <li class="mvTimeList" id="list02">
-                                    <p class="theather">A관</p>
-                                    <p class="startAndEndTime">12시00분</p>
-                                    <p class="startAndEndTime">~13시00분</p>
-                                </li>
-                                <!-- 3 -->
-                                <li class="mvTimeList" id="list03">
-                                    <p class="theather">A관</p>
-                                    <p class="startAndEndTime">13시00분</p>
-                                    <p class="startAndEndTime">~14시00분</p>
-                                </li>
-                                <!-- 4 -->
-                                <li class="mvTimeList" id="list04">
-                                    <p class="theather">A관</p>
-                                    <p class="startAndEndTime">14시00분</p>
-                                    <p class="startAndEndTime">~15시00분</p>
-                                </li>
-                                <!-- 5 -->
-                                <li class="mvTimeList" id="list05">
-                                    <p class="theather">A관</p>
-                                    <p class="startAndEndTime">15시00분</p>
-                                    <p class="startAndEndTime">~16시00분</p>
-                                </li>
-                                <!-- 6 -->
-                                <li class="mvTimeList" id="list06">
-                                    <p class="theather">A관</p>
-                                    <p class="startAndEndTime">16시00분</p>
-                                    <p class="startAndEndTime">~17시00분</p>
-                                </li>
-                                <!-- 7 -->
-                                <li class="mvTimeList" id="list07">
-                                    <p class="theather">A관</p>
-                                    <p class="startAndEndTime">17시00분</p>
-                                    <p class="startAndEndTime">~18시00분</p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="posterInformation">
-                            <p id="mvName" class="mvName">영화명</p>
-                            <p id="mvTime" class="mvTime"></p>
-                        </div>
-                        <button id="timeSelectionCompleteBtn" class="timeSelectionBtn disalbledBtn">선택 완료</button>
-                    </div>
-                </section>
-            </section>
+
+        </section>
+
         </section>
         <!-- ===하단바 영역=== -->
         <section class="bottomBar">
@@ -246,6 +230,7 @@
                     class="timeDisplay">12:00</span>
             </article>
         </section>
+
     </div>
     <!-- ==script== -->
     <script>
