admin_password ui update

--- a/view/html/admin_password.html
+++ b/view/html/admin_password.html
@@ -15,9 +15,21 @@
     <link rel="stylesheet" href="keypad.css">
     <title>password</title>
     <style>
-        .layoutArea {
-            display: flex;
 
+        .sectionHeader{
+            width: 100%;
+            height: 9%;
+            padding-top: 2rem;
+        }
+        .adminModeTitle{
+            color: #fff;
+            margin-left: 3rem;
+            font-size: 1.6rem;
+        }
+        .sectionBody{
+            display: flex;
+            width: 100%;
+            height: 91%;
         }
 
         .bookingNumberText {
@@ -69,32 +81,36 @@
     <div class="wrap">
         <!-- ===레이아웃 영역=== -->
         <section class="layoutArea">
-            <section class="logoPartArea">
-                <div class="bigLogo"></div>
+            <section class="sectionHeader">
+                <h2 class="adminModeTitle">관리자 모드</h2>
             </section>
-            <!-- 키패드 영역 -->
-            <section class="keypadBoxArea">
-                <section class="keypadArea">
-                    <p class="bookingNumberText">
-                        비밀번호 조회
-                    </p>
-                    <div type="number" class="phoneNumber"></div>
-                    <button class="key">1</button>
-                    <button class="key">2</button>
-                    <button class="key">3</button>
-                    <button class="key">4</button>
-                    <button class="key">5</button>
-                    <button class="key">6</button>
-                    <button class="key">7</button>
-                    <button class="key">8</button>
-                    <button class="key">9</button>
-                    <button class="key delete"><i class="fa-solid fa-delete-left"></i></button>
-                    <button class="key">0</button>
-                    <button class="key">재입력</button>
-                    <button class="check">확인</button>
+            <section class="sectionBody">
+                <section class="logoPartArea">
+                    <div class="bigLogo"></div>
+                </section>
+                <!-- 키패드 영역 -->
+                <section class="keypadBoxArea">
+                    <section class="keypadArea">
+                        <p class="bookingNumberText">
+                            비밀번호 조회
+                        </p>
+                        <div type="number" class="phoneNumber"></div>
+                        <button class="key">1</button>
+                        <button class="key">2</button>
+                        <button class="key">3</button>
+                        <button class="key">4</button>
+                        <button class="key">5</button>
+                        <button class="key">6</button>
+                        <button class="key">7</button>
+                        <button class="key">8</button>
+                        <button class="key">9</button>
+                        <button class="key delete"><i class="fa-solid fa-delete-left"></i></button>
+                        <button class="key">0</button>
+                        <button class="key">재입력</button>
+                        <button class="check">확인</button>
+                    </section>
                 </section>
             </section>
-
         </section>
         <!-- ===하단바 영역=== -->
         <section class="bottomBar">
