admin_password page css update

--- a/view/html/admin_password.html
+++ b/view/html/admin_password.html
@@ -66,11 +66,15 @@
         }
 
         .bigLogo {
-            width: 40rem;
-            height: 49rem;
-            background-image: url("./images/big_logo.png");
-            background-size: cover;
-            margin: 8.2rem 0 0 11.5rem;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            width: 46rem;
+            height: 46rem;
+            background: url("./images/big_logo.png") no-repeat;
+            background-size: contain;
+            background-position: 50% 50%;
         }
     </style>
 
