--- a/view/html/admin_password.html
+++ b/view/html/admin_password.html
@@ -15,18 +15,19 @@
     <link rel="stylesheet" href="keypad.css">
     <title>password</title>
     <style>
-
-        .sectionHeader{
+        .sectionHeader {
             width: 100%;
             height: 9%;
             padding-top: 2rem;
         }
-        .adminModeTitle{
+
+        .adminModeTitle {
             color: #fff;
             margin-left: 3rem;
             font-size: 1.6rem;
         }
-        .sectionBody{
+
+        .sectionBody {
             display: flex;
             width: 100%;
             height: 91%;
@@ -94,24 +95,24 @@
                 </section>
                 <!-- 키패드 영역 -->
                 <section class="keypadBoxArea">
-                    <section class="keypadArea">
+                    <section id="keypadArea" class="keypadArea">
                         <p class="bookingNumberText">
                             비밀번호 조회
                         </p>
-                        <div type="number" class="phoneNumber"></div>
-                        <button class="key">1</button>
-                        <button class="key">2</button>
-                        <button class="key">3</button>
-                        <button class="key">4</button>
-                        <button class="key">5</button>
-                        <button class="key">6</button>
-                        <button class="key">7</button>
-                        <button class="key">8</button>
-                        <button class="key">9</button>
-                        <button class="key delete"><i class="fa-solid fa-delete-left"></i></button>
-                        <button class="key">0</button>
-                        <button class="key">재입력</button>
-                        <button class="check">확인</button>
+                        <input id="phoneNumber" class="phoneNumber" type="text" placeholder="010-1111-2222">
+                        <button class="key" data-value="1">1</button>
+                        <button class="key" data-value="2">2</button>
+                        <button class="key" data-value="3">3</button>
+                        <button class="key" data-value="4">4</button>
+                        <button class="key" data-value="5">5</button>
+                        <button class="key" data-value="6">6</button>
+                        <button class="key" data-value="7">7</button>
+                        <button class="key" data-value="8">8</button>
+                        <button class="key" data-value="9">9</button>
+                        <button class="key delete" data-value="delete"><i class="fa-solid fa-delete-left"></i></button>
+                        <button class="key" data-value="0">0</button>
+                        <button class="key" data-value="reset">재입력</button>
+                        <button id="checkBtn" class="check" data-value="check">확인</button>
                     </section>
                 </section>
             </section>
@@ -130,6 +131,128 @@
         </section>
 
     </div>
+    <script>
+
+        class InputUserNum {
+            constructor(id) {
+                this.id = id;
+            }
+
+            displayData(item) {
+                document.getElementById(`phoneNumber`).value = item;
+            }
+
+            //Deck 영역
+            inputData(id) {
+                class Deck {
+                    constructor(id) {
+                        this.id = id;
+                        this.storage = [];
+                        this.length = 0;
+                    }
+                    pushItem(item) {
+                        this.storage.push(item);
+                    }
+                    shiftItem() {
+                        return this.storage.shift();
+                    }
+                    popItem() {
+                        return this.storage.pop();
+                    }
+                    getLength() {
+                        this.length = this.storage.length;
+                        return this.storage.length;
+                    }
+                    getLastItem() {
+                        return this.storage[this.storage.length - 1];
+                    }
+                }
+                let tempString = "";
+                const InputUserNumberDeck = new Deck(this.id);
+                //누르는 값을 가져오는 영역
+                document.getElementById(`keypadArea`).addEventListener("click", (e) => {
+                        if (
+                            e.target.dataset.value != null &&
+                            e.target.dataset.value != "reset" &&
+                            e.target.dataset.value != "delete" &&
+                            InputUserNumberDeck.getLength() < 13
+                        ) {
+
+                            if (InputUserNumberDeck.getLength() == 3 || InputUserNumberDeck.getLength() == 8) {
+                                InputUserNumberDeck.pushItem("-");
+                            }
+
+                            if (InputUserNumberDeck.getLength() == 9 || InputUserNumberDeck.getLength() == 4) {
+                                // console.log("lastItem" + InputUserNumberDeck.getLastItem());
+                                // console.log(InputUserNumberDeck.storage);
+                                if (InputUserNumberDeck.getLastItem() != "-") {
+                                    InputUserNumberDeck.pushItem("-");
+                                }
+                            }
+
+                            InputUserNumberDeck.pushItem(e.target.dataset.value);
+
+                            tempString = "";
+                            for (let i = 0; i < InputUserNumberDeck.storage.length; i++) {
+                                let tempV = "";
+                                tempV = InputUserNumberDeck.shiftItem();
+                                tempString += tempV;
+                                InputUserNumberDeck.pushItem(tempV);
+                            }
+                            this.displayData(tempString);
+                            //console.log(e.target.dataset.value);
+                        }
+                        switch (e.target.dataset.value) {
+                            case "reset":
+                                InputUserNumberDeck.storage = [];
+                                tempString = "";
+                                this.displayData(tempString);
+                                break;
+                            case "delete":
+                                if (InputUserNumberDeck.getLength() === 10 || InputUserNumberDeck.getLength() === 5) {
+                                    // console.log(InputUserNumberDeck.storage);
+                                    // console.log(InputUserNumberDeck.getLength());
+                                    InputUserNumberDeck.popItem();
+                                    InputUserNumberDeck.popItem();
+
+                                    tempString = "";
+                                    for (let i = 0; i < InputUserNumberDeck.storage.length; i++) {
+                                        let tempV = "";
+                                        tempV = InputUserNumberDeck.shiftItem();
+                                        tempString += tempV;
+                                        InputUserNumberDeck.pushItem(tempV);
+                                    }
+                                    this.displayData(tempString);
+                                    break;
+                                } else {
+                                    console.log(InputUserNumberDeck.storage);
+                                    InputUserNumberDeck.popItem();
+
+                                    tempString = "";
+                                    for (let i = 0; i < InputUserNumberDeck.storage.length; i++) {
+                                        let tempV = "";
+                                        tempV = InputUserNumberDeck.shiftItem();
+                                        tempString += tempV;
+                                        InputUserNumberDeck.pushItem(tempV);
+                                    }
+                                    this.displayData(tempString);
+                                    break;
+                                }
+                            case "check":
+                                InputUserNumberDeck.popItem();
+                                let Number = String(InputUserNumberDeck.storage);
+                                let realUserNumber = (Number.replace(/-/g, '')).replace(/,/g, '');
+                                console.log(realUserNumber);
+                        }
+                    });
+            }
+            control() {
+                this.inputData();
+            }
+        }
+        const userNumber = new InputUserNum('userNumber');
+        userNumber.control();
+    </script>
 </body>
 
 </html>
