content_seat_ejs update

--- a/view/content_seat_selection.ejs
+++ b/view/content_seat_selection.ejs
@@ -201,14 +201,15 @@
             }
         }
         const { adultCount, youthCount, specialCount } = countDom;
+        const choosenSeat = document.getElementById("choosenSeat");
 
         // 버튼 예외처리
         const disalbledBtnFunc = () => {
             const totalCount = (headCount.adult + headCount.youth + headCount.special);
             if (totalCount == headCount.seatCount) {
-                document.getElementById("choosenSeat").classList.remove("disalbledBtn");
+                choosenSeat.classList.remove("disalbledBtn");
             } else {
-                document.getElementById("choosenSeat").classList.add("disalbledBtn");
+                choosenSeat.classList.add("disalbledBtn");
             }
         }
 
@@ -275,21 +276,12 @@
                 }
                 console.log(headCount);
             }
-<<<<<<< HEAD
-        })
-
-        choosenSeat.addEventListener("click", () => {
-                window.location.href = "/payment";
         });
 
-=======
-        });
 
-        const choosenSeat = document.getElementById("choosenSeat");
         choosenSeat.addEventListener( "click", () => {
             location.href = "/payment";
         });
->>>>>>> 3f1eb9db4a2dd7cb6940f0630bc83dfbaa63adcc
     </script>
     
     <style>
